expand Api coverage

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,22 @@ export(company)
 export(dividends)
 export(earnings)
 export(effectiveSpread)
+export(estimates)
 export(financials)
-export(getQuote)
-export(history)
+export(historyFor)
 export(iex)
 export(iexRaw)
 export(incomeStatement)
+export(keyStats)
+export(listOf)
+export(listSymbols)
+export(logoFor)
+export(marketVolume)
+export(newsFor)
+export(ohlc)
+export(peersOf)
+export(previousDay)
+export(priceOf)
+export(priveTarget)
+export(quoteFor)
 importFrom(magrittr,"%>%")
