--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(balanceSheet)
 export(cashflowStatement)
 export(company)
+export(delayedQuote)
 export(dividends)
 export(earnings)
 export(effectiveSpread)
@@ -14,6 +15,7 @@ export(iex)
 export(iexRaw)
 export(incomeStatement)
 export(keyStats)
+export(largestTrades)
 export(listOf)
 export(listSymbols)
 export(logoFor)
@@ -23,6 +25,9 @@ export(ohlc)
 export(peersOf)
 export(previousDay)
 export(priceOf)
-export(priveTarget)
+export(priceTarget)
 export(quoteFor)
+export(socialSentiment)
+export(splits)
+export(volumeByVenue)
 importFrom(magrittr,"%>%")
