--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,9 @@ License: MIT
 Encoding: UTF-8
 LazyData: true
 Suggests: 
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
 Imports:
     magrittr,
     dplyr,
@@ -20,3 +22,4 @@ Imports:
     tidyr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
+VignetteBuilder: knitr
