add numerous endpoints

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,11 @@
 export("%>%")
 export(accountMetaData)
 export(accountUsage)
+export(advancedStats)
 export(balanceSheet)
 export(cashflowStatement)
 export(company)
+export(dailyTimeSeriesAdapter)
 export(deep)
 export(deepAuction)
 export(deepOfficialPrice)
@@ -18,10 +20,14 @@ export(effectiveSpread)
 export(enablePayAsYouGo)
 export(estimates)
 export(financials)
+export(fundOwnership)
 export(historyFor)
 export(iex)
 export(iexRaw)
 export(incomeStatement)
+export(insiderRoster)
+export(insiderSummary)
+export(insiderTransactions)
 export(keyStats)
 export(largestTrades)
 export(listOf)
@@ -35,6 +41,7 @@ export(previousDay)
 export(priceOf)
 export(priceTarget)
 export(quoteFor)
+export(recommendationTrend)
 export(socialSentiment)
 export(splits)
 export(tops)
