earningToday endpoint added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(delayedQuote)
 export(disablePayAsYouGo)
 export(dividends)
 export(earnings)
+export(earningsToday)
 export(effectiveSpread)
 export(enablePayAsYouGo)
 export(estimates)
