tops(); topsLast(); upcomingEarnings()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,5 +47,6 @@ export(socialSentiment)
 export(splits)
 export(tops)
 export(topsLast)
+export(upcomingEarnings)
 export(volumeByVenue)
 importFrom(magrittr,"%>%")
