--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(largestTrades)
 export(listOf)
 export(listSymbols)
 export(logoFor)
+export(marketOpen)
 export(marketVolume)
 export(newsFor)
 export(ohlc)
