fix tops endpoint

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(accountMetaData)
 export(accountUsage)
 export(advancedStats)
+export(allregionSymbols)
 export(balanceSheet)
 export(cashflowStatement)
 export(company)
@@ -24,7 +25,9 @@ export(financials)
 export(fundOwnership)
 export(historyFor)
 export(iex)
+export(iexExchanges)
 export(iexRaw)
+export(iexSymbols)
 export(incomeStatement)
 export(insiderRoster)
 export(insiderSummary)
@@ -44,6 +47,7 @@ export(priceOf)
 export(priceTarget)
 export(quoteFor)
 export(recommendationTrend)
+export(regionSymbols)
 export(socialSentiment)
 export(splits)
 export(tops)
