debug code for package initialization

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(allregionSymbols)
 export(balanceSheet)
 export(cashflowStatement)
 export(company)
+export(constructURL)
 export(dailyTimeSeriesAdapter)
 export(deep)
 export(deepAuction)
