--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(enablePayAsYouGo)
 export(estimates)
 export(financials)
 export(fundOwnership)
+export(getConfig)
 export(historyFor)
 export(iex)
 export(iexExchanges)
