--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(advancedStats)
 export(allregionSymbols)
 export(balanceSheet)
 export(cashflowStatement)
+export(coalesce)
 export(company)
 export(constructURL)
 export(dailyTimeSeriesAdapter)
@@ -25,6 +26,8 @@ export(estimates)
 export(financials)
 export(fundOwnership)
 export(getConfig)
+export(getMessageCount)
+export(getToken)
 export(historyFor)
 export(iex)
 export(iexExchanges)
@@ -50,6 +53,9 @@ export(priceTarget)
 export(quoteFor)
 export(recommendationTrend)
 export(regionSymbols)
+export(setMessageCount)
+export(setSecretKey)
+export(setToken)
 export(socialSentiment)
 export(splits)
 export(tops)
