add data-points to api

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ export(coalesce)
 export(company)
 export(constructURL)
 export(dailyTimeSeriesAdapter)
+export(data_point_keys)
+export(data_points)
 export(deep)
 export(deepAuction)
 export(deepOfficialPrice)
