--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,7 +32,6 @@ export(getConfig)
 export(getMessageCount)
 export(getToken)
 export(historyFor)
-export(iex)
 export(iexExchanges)
 export(iexRaw)
 export(iexSymbols)
@@ -45,6 +44,7 @@ export(keyStats)
 export(largestTrades)
 export(listOf)
 export(listSymbols)
+export(list_all_times_series)
 export(logoFor)
 export(marketOpenClose)
 export(marketVolume)
@@ -62,6 +62,7 @@ export(setSecretKey)
 export(setToken)
 export(socialSentiment)
 export(splits)
+export(time_series)
 export(tops)
 export(topsLast)
 export(upcomingEarnings)
