support for batch requests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(accountUsage)
 export(advancedStats)
 export(allregionSymbols)
 export(balanceSheet)
+export(batch_request)
 export(cashflowStatement)
 export(coalesce)
 export(company)
