change unnest() to unnest_legacy()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(iexRaw)
 export(iexSymbols)
 export(iex_api)
 export(incomeStatement)
+export(indicator)
 export(insiderRoster)
 export(insiderSummary)
 export(insiderTransactions)
